    environments so long as the builders have the same signature for
    the environments in questions (that is, they're the same action).

  From Bob Halley:

  - When multiple targets are built by a single action, retrieve all
    of them from cache, not just the first target, and exec the build
    command if any of the targets isn't present in the cache.

  From Steven Knight:

  - Fix EnsureSConsVersion() so it checks against the SCons version,
    not the Python version, on Pythons with sys.version_info.

  - Don't swallow the AttributeError when someone uses an expansion like
    $TARGET.bak, so we can supply a more informative error message.

  - Fix an odd double-quote escape sequence in the man page.

  - Fix looking up a naked drive letter as a directory (Dir('C:')).

  - Support using File nodes in the LIBS construction variable.

  - Allow the LIBS construction variable to be a single string or File
    node, not a list, when only one library is needed.

  - Fix typos in the man page:  JAVACHDIR => JARCHDIR; add "for_signature"
    to the __call__() example in the "Variable Substitution" section.

  - Correct error message spellings of "non-existant" to "non-existent."

  - When scanning for libraries to link with, don't append $LIBPREFIXES
    or $LIBSUFFIXES values to the $LIBS values if they're already present.

  - Add a ZIPCOMPRESSION construction variable to control whether the
    internal Python action for the Zip Builder compresses the file or
    not.  The default value is zipfile.ZIP_DEFLATED, which generates
    a compressed file.

  - Refactor construction variable expansion to support recursive
    expansion of variables (e.g. CCFLAGS = "$CCFLAGS -g") without going
    into an infinite loop.

  - Fix calling Configure() from more than one subsidiary SConscript file.

  - Fix the env.Action() method so it returns the correct type of
    Action for its argument(s).

  - Fix specifying .class files as input to JavaH with the .class suffix